test/orig/01-syntax/inv_msg/inv_msg.expected
File "inv_msg.ml", line 1, characters 24-25:
1 | let () = [%LOG [%DEBUG] 0]
                            ^
Error: This expression has type int but an expression was expected of type
         string
