test/orig/01-syntax/inv_msg/inv_msg.ml
let () = [%LOG [%DEBUG] 0]
